# dynasty-hq

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: build-binaries.yml  docker-publish.yml
app/: __main__.py  db.py  importer.py  main.py  schemas.py  settings_store.py  vision.py
app/models/: __init__.py
app/routers/: dynasty.py  games.py  importer.py  players.py  recruits.py  settings.py  stats.py
docs/: vision-ocr.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: DynastySwitcher.tsx  Icons.tsx  Layout.tsx  UI.tsx
frontend/src/hooks/: useDynastyId.ts
frontend/src/lib/: api.ts  format.ts  types.ts
frontend/src/pages/: Dashboard.tsx  Dynasties.tsx  Import.tsx  PlayerDetail.tsx  Recruits.tsx  Roster.tsx  Schedule.tsx  Settings.tsx  Stats.tsx
scripts/: build-binary.sh
tests/: test_importer.py
