[project]
name = "dynasty-hq"
version = "0.1.0"
description = "CFB 26 Dynasty tracker backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
]

[project.scripts]
dynasty-hq = "app.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "pyinstaller>=6.16.0",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
